<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.pk.broadcastrecievers.UI.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ma_wifi_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_wifi_state"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ma_airplane_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_airlane_mode"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ma_bluetooth_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_bluetooth_state"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ma_gps_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_gps_state"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_wifi"
            android:text="@string/ma_wifi"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_airplane_mode"
            android:text="@string/ma_am"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_bluetooth"
            android:text="@string/ma_bluetooth"
            android:layout_weight="0"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_gps"
            android:text="@string/ma_gps"
            android:layout_weight="1"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
